clean up build file