@@ -12,9 +12,6 @@ applicationDefaultJvmArgs = ['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
                              '--add-opens=java.base/java.lang=ALL-UNNAMED',
                              '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                              '--add-opens=java.base/java.io=ALL-UNNAMED',
-                             '--add-opens=java.base/java.logging=ALL-UNNAMED',
-                             '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
-                             '--add-reads=org.jboss.logging=java.logging',
                              '-Djava.util.logging.config.file="logging.properties"',
 ]
 
@@ -35,6 +32,32 @@ application {
 
 mainClassName = 'SuperMario/supermario.Main'
 
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'SuperMarioLauncher'
+    }
+    launcher {
+        jvmArgs = ['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+                   '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                   '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                   '--add-opens=java.base/java.io=ALL-UNNAMED',
+                   '-Djava.util.logging.config.file="logging.properties"']
+    }
+    jpackage {
+        def currentOs = org.gradle.internal.os.OperatingSystem.current()
+        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
+        installerOptions += ['--vendor', 'Parsa Torbati',
+                             '--app-version', version]
+        if (currentOs.macOsX) {
+            jvmArgs = ["-Duser.dir=/tmp"]
+        } else if (currentOs.windows) {
+            installerOptions = ['--win-per-user-install', '--win-dir-chooser', '--win-menu']
+        } else {
+            installerType = 'deb' // 'rpm'
+        }
+    }
+}
 
 
 test {
